[package]
name = "tiktok-shop-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json"] }

thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"

# Cryptography for API signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio-rusqlite = "0.7.0"
